[package]
name = "polkadot-test-runtime"
version = "0.9.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-nicks = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = "0.3.5"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
serde_json = "1.0.61"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
]
