[package]
name = "pallet-shift-session-manager"
description = "A Substrate Runtime module that selects 2/3 of initial validators for every session"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
serde = "1.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"sp-staking/std",
	"sp-std/std",
]
