[package]
name = "bp-runtime"
description = "Primitives that may be used at (bridges) runtime level."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "rh-v0.9.5-missing-companions" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rh-v0.9.5-missing-companions" }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"hash-db/std",
	"num-traits/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-state-machine/std",
	"sp-trie/std",
]
