[package]
name = "polkadot-test-client"
version = "0.9.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
futures = "0.3.15"
