[package]
name = "polkadot-test-client"
version = "0.9.13"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
futures = "0.3.17"
